# nordic-wifi-webdash

./: .gitignore  CMakeLists.txt  Kconfig  README.md  overlay-sta-no-webserver.conf  overlay-sta-webserver.conf  overlay-wifi-credentials.conf.template  prj.conf  sysbuild.conf  west.yml
.github/workflows/: build.yml  release.yml  validation.yml
boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.conf
docs/: PRD.md  QA.md
docs/dev-specs/: architecture.md  led-module.md  mode-selector.md  network-module.md  overview.md  ux-module.md  webserver-module.md
docs/engineering/: config.yaml
docs/engineering/proposals/: PROPOSAL_TEMPLATE.md
docs/engineering/specs/: architecture.md  wifi-module.md
docs/pm-prd/: PRD.md
docs/product/: PRD.md
docs/qa-test/: QA-2026-05-06-12-00.md  VERIFICATION-2026-06-05-10-10.md
docs/specs/: architecture.md  button-module.md  led-module.md  mode-selector.md  network-module.md  overview.md  webserver-module.md  wifi-module.md
pm/: PRD.md  QA.md
pm/openspec/specs/: architecture.md  button-module.md  mode-selector.md  webserver-module.md  wifi-module.md
src/: main.c
src/modules/: messages.h
src/modules/button/: button.c
src/modules/led/: led.c
src/modules/memory/: Kconfig.memory  heap_monitor.c
src/modules/mode_selector/: CMakeLists.txt  Kconfig.mode_selector  mode_selector.c  mode_selector.h
src/modules/network/: CMakeLists.txt  Kconfig.network  net_event_app.c  net_event_mgmt.c  net_event_mgmt.h  network.c  network.h  wifi_utils.c  wifi_utils.h
src/modules/ux/: Kconfig
src/modules/webserver/: CMakeLists.txt  main.js  webserver.c
src/modules/webserver/www/: index.html  main.js  styles.css
src/modules/wifi/: Kconfig.wifi  wifi.c  wifi.h
src/modules/www/: index.html  styles.css
sysbuild/hci_ipc/: prj.conf
www/: index.html
